samples/_failures_safe/1761461239_ce165e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a20c547.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_2a20c547.c:154:9: error: expected declaration or statement at end of input
  154 |         }
      |         ^
./samples/SAFE/__tmp_2a20c547.c:154:9: error: expected declaration or statement at end of input
